feat(documentação) documentando endpoint de clientes
